--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -1,6 +1,9 @@
 .Header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   width: 100%;
-
+  margin-bottom: 15px;
 }
 .Headline {
   text-shadow: 2px 1px cyan, -1px -2px magenta;
