--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .Header {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
   justify-content: space-between;
   width: 100%;
   margin-bottom: 15px;
