feat: (client) move datePicker to NavBar, add prevDay+nextDay buttons (antd+redux)

--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .Header {
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
+  grid-template-columns: 1fr 1fr;
   justify-content: space-between;
   width: 100%;
   margin-bottom: 15px;
