--- a/client/src/components/Timetable/TimetableContainer/TimetableContainer.module.css
+++ b/client/src/components/Timetable/TimetableContainer/TimetableContainer.module.css
@@ -2,7 +2,8 @@
   box-sizing: border-box;
   margin: auto;
   width: 90%;
-  height: 90%;
+  height: 100%;
+  padding-bottom: 15px;
   display: grid;
   /* grid-template-rows: 12fr 1fr; */
 
