--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 .Header {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
   width: 100%;
   margin-bottom: 15px;
 }
