--- a/client/src/components/Timetable/TeamtableContainer/TeamtableContainer.module.css
+++ b/client/src/components/Timetable/TeamtableContainer/TeamtableContainer.module.css
@@ -3,23 +3,26 @@
   width: 100%;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
+  background-color: #fff;
+  background-image: linear-gradient(#f0f2f5 50%, transparent 50%);
 }
 
 .day {
   position: relative;
   height: 100%;
   float: left;
-  background-color: #fff;
-  background-image: linear-gradient(#f0f2f5 50%, transparent 50%);
+
 }
 .dayHeader {
 
 }
 
 .hour {
-
+  border-top: 1px solid #3333;
 }
-
+.hoursScale {
+  background-color: #f0f2f5;
+}
 .hoursScaleHeader {
 
 }
