fix: (client) move logo out of Menu, responsive Menu hides logo

--- a/client/src/components/AppMenu/AppMenu.module.css
+++ b/client/src/components/AppMenu/AppMenu.module.css
@@ -1,5 +1,6 @@
 
-.logo {
-  text-shadow: 2px 1px 1px cyan, -1px -2px 1px magenta;
+.menu {
+  /* text-shadow: 2px 1px 1px cyan, -1px -2px 1px magenta; */
   margin: 10px;
+  color: white;
 }
