--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -4,8 +4,9 @@
   justify-content: space-between;
   width: 100%;
   margin-bottom: 15px;
+  background-color: white;
 }
-.Headline {
+.logo {
   text-shadow: 2px 1px cyan, -1px -2px magenta;
   margin: 10px;
 }
