--- a/client/src/components/Timetable/TimetableContainer/TimetableContainer.module.css
+++ b/client/src/components/Timetable/TimetableContainer/TimetableContainer.module.css
@@ -1,9 +1,26 @@
 .TimetableContainer {
-  box-sizing: border-box;
-  margin: auto;
-  width: 100%;
   height: 100%;
-  padding-bottom: 15px;
+  width: 100%;
   display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  background-color: #fff;
+  background-image: linear-gradient(#f0f2f5 50%, transparent 50%);
 }
 
+.day {
+  position: relative;
+  height: 100%;
+  float: left;
+}
+.dayHeader {
+}
+
+.hour {
+  border-top: 1px solid #3333;
+  width: 100px;
+}
+.hoursScale {
+  background-color: #f0f2f5;
+}
+.hoursScaleHeader {
+}
