feature(client): add top margin to footer

--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -4,6 +4,7 @@
   color: #3338;
   /* text-shadow: 1px 1px 1px cyan, -1px -1px 1px magenta; */
   /* text-transform: uppercase; */
+  margin-top: 15px;
   padding: 10px;
   text-align: right;
   box-shadow: 0 0 15px #3333;
