style(client): convert colors to vars

--- a/client/src/components/FilterBar/FilterBar.module.css
+++ b/client/src/components/FilterBar/FilterBar.module.css
@@ -1,6 +1,6 @@
 .FilterBar {
   margin: 0rem 0.5rem 0.3rem 0.5rem;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto auto;
   place-items: left;
 }
