--- a/client/src/components/Calendar/Calendar.module.css
+++ b/client/src/components/Calendar/Calendar.module.css
@@ -47,18 +47,13 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  border-radius: 3px;
+  border-radius: 0 0.2rem 0 0.2rem;
+  /* border-radius: 0.5rem; */
   border-top: 1px solid;
-  box-shadow: 0 0 3px #3333;
+  box-shadow: 0.2rem 0.2rem 2px #3333;
   transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
-.event:hover,
-.event:focus {
-  border-color: inherit;
-  border-top: 2px solid;
-  box-shadow: 0 0 15px #3333;
-  cursor: pointer;
-}
+
 .event_info {
   color: var(--secondary);
   font-size: 1.2em;
@@ -110,4 +105,11 @@
 .bg_mint {
   border-color: var(--bgMintBorder);
   background-color: var(--bgMint);
+}
+.event:hover,
+.event:focus {
+  /* border-top-width: 3px; */
+  transform: scale(1.05);
+  box-shadow: 0.1rem 0.1rem 5px #3333;
+  cursor: pointer;
 }
